ERS: build the sorted hash lists by collecting and sorting once rather than finding each insertion point by walking a LinkedList with get(index), incorporating github PR #2457, relates to github #2456.